ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8018.hs
{-# LANGUAGE TypeFamilies #-}

module T8018 where

data Foo a = Bar (F a)

type family F a where
  F (Foo a) = Bool